[project]
name = "custom-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayesha", email = "aishey082@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.1",
    "openai-agents>=0.0.4",
    "python-dotenv>=1.0.1",
]

[project.scripts]
custom-agents = "custom_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
